# batconf

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  KEYS  LICENSE  Makefile  README.md  example.config.yaml  noxfile.py  personal-notes.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release.md  release.yml
.github/workflows/: codeql.yml  format-release-issue.yml  notebooks.yml  python-app.yml  scorecard.yml  tests.yml
batconf/: __init__.py  demo.py  lib.py  manager.py  source.py  types.py
batconf/sources/: _compat.py  argparse.py  args.py  dataclass.py  env.py  file.py  ini.py  toml.py  types.py  yaml.py
batconf/sources/tests/: _compat_test.py  argparse_test.py  args_test.py  dataclass_test.py  env_test.py  file_test.py  ini_test.py  toml_test.py  types_test.py  yaml_test.py
batconf/tests/: lib_test.py  manager_test.py  namespace_test.py  source_test.py  types_test.py
docs/: Makefile  README.md  SECURITY.md
docs/agents/: adr.md  python-style.md  tdd.md
docs/decisions/: 0002-get-path-parameter.md  README.md
docs/decisions/0000-foundational/: 01-source-list-first-wins.md  02-dataclass-schema.md  03-zero-mandatory-dependencies.md  04-module-path-namespace.md  05-multi-environment-file-format.md  06-string-only-values.md  07-source-interface-protocol-over-abc.md  08-config-singleton.md  README.md
docs/decisions/0001-file-source-classes/: 0001-unified-file-source-api.md  0002-lazy-loading.md  0003-import-time-deprecation.md  0004-compat-module.md  README.md  REQUIREMENTS.md
docs/proposals/2026scipy/: proposal.md  talk-outline.md
docs/source/: builddocs.rst  changelog.rst  comparison.md  comparison.rst  comparisons.rst  conf.py  devblog.rst  devguide.md  devguide.rst  diagram_config_comp.py  guide.rst  index.md  index.md.bak  index.rst  intro.md  intro.rst  migration.rst  modules.rst  publishing.rst  quickstart.md  quickstart.rst  setup.rst  signing.rst  welcome.rst
docs/source/_static/: custom.css
notebooks/: Example.ipynb  README.md  config.flat.toml  config.ini  config.py  config.sections.toml
notebooks/subdirectory/: notes.ipynb  subconf.ini
tests/example/: README.md  config.ini  config.yaml  configuration_test.py  example_test.py  freethreading_test.py  runcli.py
tests/example-legacy/: README.md  config.yaml  legacy_test.py  runcli.py
tests/example-legacy/legacy/: __init__.py  cli.py  conf.py  lib.py
tests/example-legacy/legacy/submodule/: sub.py
tests/example/project/: __init__.py  cli.py  conf.py  lib.py
tests/example/project/submodule/: __init__.py  client.py  sub.py
tests/integration/: argparse_test.py  configuration_test.py  deprecated_module_param_test.py  file_source_parity_test.py  ini_test.py  toml_test.py  yaml_opt_test.py  yaml_test.py
tests/integration/data/: config.yaml  envs.config.ini  envs.config.toml  envs.config.yaml  flat.config.ini  flat.config.toml  flat.config.yaml  sections.config.ini  sections.config.toml  sections.config.yaml
