[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "batconf"
version = "0.4.0+dev"
description = "Application configuration tool from the BAT project"
authors = [
    { name = 'Lundy Bernard', email = 'lundy.bernard@gmail.com' },
    { name = 'Lauren Moore', email = 'donotreply@no.com' },
]
license = { file = 'LICENSE' }
readme = "README.md"
requires-python = '>=3.10'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Operating System :: OS Independent',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
]

[project.urls]
documentation = "https://batconf.readthedocs.io/en/latest/"
repository = "https://github.com/lundybernard/batconf/"
issues = 'https://github.com/lundybernard/batconf/issues'
changelog = 'https://batconf.readthedocs.io/en/latest/changelog.html'


[project.optional-dependencies]
# optional extras for users:
yaml = ['pyyaml']
toml = ['toml ; python_version <= "3.10"']

[dependency-groups]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]

lint = [
    "flake8",
]

typecheck = [
    "mypy",
    "types-PyYAML",
    "types-toml",
]

# Full interpreter matrix (nox + its uv backend). Standalone so devs who do not
# use pixi can `uv sync --group test-matrix` and run `nox` directly.
test-matrix = [
    "nox",
    "uv",
]

# convenience group for local development:
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typecheck"},
    {include-group = "test-matrix"},
]

build = [
    'hatch',
    'twine',
]

# optional documentation dependencies
docs = [
    'myst_parser',
    'nbconvert',
    'sphinx',
    'sphinx_autodoc_typehints',
    'sphinxext-opengraph',
    'sphinx_design',
    'sphinx-rtd-theme',
    'matplotlib', # for social preview cards
    'diagrams',
]


# === Testing === #
[tool.pytest.ini_options]
log_level = "INFO"
addopts = "--cov=batconf --cov-report=term"
cache_dir = ".cache/pytest"
python_classes = '*Tests'
python_files = ["*_test.py", "*_pytest.py", "test_*.py"]

[tool.coverage.run]
data_file = ".cache/coverage"

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true
skip_empty = true


# === Formatting === #
[tool.flake8]
max-line-length = "79"
max-complexity = 10

[tool.ruff]
line-length = 79
cache-dir = ".cache/ruff"
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['S']
ignore = ['F401']
[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = ["N805"]

# === Type Checking === #
[tool.mypy]
exclude = "runcli.py"
cache_dir = ".cache/mypy"

# === UV === #
[tool.uv]
exclude-newer = "7 days"

# === Pixi (dev environment) === #
# Fast single-python inner loop + IDE (nvim). pip-first: PyPI for pure-python,
# conda only when necessary. The full interpreter matrix lives in noxfile.py
# (installed frozen from uv.lock). `exclude-newer` mirrors [tool.uv] so the dev
# env carries the same supply-chain cooldown as the matrix.
#
# Tool sets come from [dependency-groups] (test/lint/typecheck/dev) — pixi maps
# each PEP 735 group to a feature of the same name, so there is a single source
# of truth shared with uv/nox. Each task is attached to its feature, so it runs
# in exactly one environment (no ambiguity); the single-feature envs isolate the
# tools for targeted runs and CI (`pixi run test`, `pixi run lint`, ...). The
# `dev` group includes all three, so the default environment is the union nvim
# activates (`pixi shell`).
[tool.pixi.workspace]
channels = ["conda-forge"]
# Exactly the platforms CI launches nox on (ubuntu/macos/windows runners). nox
# itself ships only in this lock, not uv.lock, so every CI OS must resolve here.
# osx-64 (Intel mac) is omitted: GitHub has no Intel runner, so it is never
# tested; add it only if a dev runs pixi on Intel hardware.
platforms = ["linux-64", "osx-arm64", "win-64"]
exclude-newer = "7d"

[tool.pixi.dependencies]
# conda only when necessary — the interpreter itself.
python = "3.14.*"

[tool.pixi.pypi-dependencies]
# default feature (present in every environment): the project under test.
batconf = { path = ".", editable = true, extras = ["yaml", "toml"] }

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
typecheck = { features = ["typecheck"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest batconf && pytest --no-cov tests"

[tool.pixi.feature.lint.tasks]
lint = "flake8 batconf tests --count --select=E9,F63,F7,F82 --show-source --statistics && flake8 batconf tests --count --exit-zero --statistics"

[tool.pixi.feature.typecheck.tasks]
typecheck = "mypy batconf && mypy tests"

# nox + uv reach the default environment via the dev group's test-matrix
# include; the task lives on the dev feature so it runs there.
[tool.pixi.feature.dev.tasks]
matrix = "nox -s parallel -- -q"
